Correcting Sing in interfaces and adding the File Chooser

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,7 +3,14 @@
 /AcceuilStudent$11.class
 /AcceuilStudent$12.class
 /AcceuilStudent$13.class
+/AcceuilStudent$14.class
+/AcceuilStudent$15.class
+/AcceuilStudent$16.class
+/AcceuilStudent$17.class
+/AcceuilStudent$18.class
+/AcceuilStudent$19.class
 /AcceuilStudent$2.class
+/AcceuilStudent$20.class
 /AcceuilStudent$3.class
 /AcceuilStudent$4.class
 /AcceuilStudent$5.class
@@ -12,6 +19,21 @@
 /AcceuilStudent$8.class
 /AcceuilStudent$9.class
 /AcceuilStudent.class
+/Controleur.class
+/InscriptionStudent$1.class
+/InscriptionStudent$2.class
+/InscriptionStudent$3.class
+/InscriptionStudent.class
+/InscriptionStudentAng$1.class
+/InscriptionStudentAng$2.class
+/InscriptionStudentAng.class
+/InscriptionTeacherAng$1.class
+/InscriptionTeacherAng$2.class
+/InscriptionTeacherAng.class
+/InsriptionTeacher$1.class
+/InsriptionTeacher$2.class
+/InsriptionTeacher.class
+/Liste des commandes(resume trié!).pdf
 /LoginAdmin$1.class
 /LoginAdmin$2.class
 /LoginAdmin$3.class
@@ -53,45 +75,32 @@
 /LoginTeacherFr$4.class
 /LoginTeacherFr$5.class
 /LoginTeacherFr$6.class
+/LoginTeacherFr$7.class
 /LoginTeacherFr.class
 /Welcome$1.class
 /Welcome.class
+/WelcomeHome.class
+/code/
+/linux.pdf
+/text.txt
 /WelcomeHome$1.class
 /WelcomeHome$2.class
 /WelcomeHome$3.class
 /WelcomeHome$4.class
 /WelcomeHome$5.class
 /WelcomeHome$6.class
-/WelcomeHome.class
-/code/
 /tdt$1.class
 /tdt.class
 /tst$1.class
 /tst$2.class
 /tst$3.class
 /tst.class
-/AcceuilStudent$14.class
-/AcceuilStudent$15.class
-/AcceuilStudent$16.class
-/AcceuilStudent$17.class
-/AcceuilStudent$18.class
-/AcceuilStudent$19.class
-/AcceuilStudent$20.class
-/InscriptionStudent$1.class
-/InscriptionStudent$2.class
-/InscriptionStudent.class
-/InscriptionStudentAng$1.class
-/InscriptionStudentAng$2.class
-/InscriptionStudentAng.class
-/InscriptionTeacherAng$1.class
-/InscriptionTeacherAng$2.class
-/InscriptionTeacherAng.class
-/InsriptionTeacher$1.class
-/InsriptionTeacher$2.class
-/InsriptionTeacher.class
-/LoginTeacherFr$7.class
-/Main_Test.class
-/Controll.class
-/Control.class
-/InscriptionStudent$3.class
-/Controleur.class
+/InscriptionStudent$4.class
+/InscriptionStudent$5.class
+/InscriptionStudentAng$3.class
+/InscriptionTeacherAng$3.class
+/InsriptionTeacher$3.class
+/AffichagePhoto$1.class
+/AffichagePhoto.class
+/InsriptionTeacher$4.class
+/AffichagePhoto$2.class
