implementing forum ui

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -11,6 +11,10 @@
 /AcceuilStudent$19.class
 /AcceuilStudent$2.class
 /AcceuilStudent$20.class
+/AcceuilStudent$21.class
+/AcceuilStudent$22.class
+/AcceuilStudent$23.class
+/AcceuilStudent$24.class
 /AcceuilStudent$3.class
 /AcceuilStudent$4.class
 /AcceuilStudent$5.class
@@ -19,21 +23,38 @@
 /AcceuilStudent$8.class
 /AcceuilStudent$9.class
 /AcceuilStudent.class
+/AcceuilTeacher$1.class
+/AcceuilTeacher$2.class
+/AcceuilTeacher$3.class
+/AcceuilTeacher$4.class
+/AcceuilTeacher$5.class
+/AcceuilTeacher$6.class
+/AcceuilTeacher$7.class
+/AcceuilTeacher$8.class
+/AcceuilTeacher.class
+/AffichagePhoto$1.class
+/AffichagePhoto$2.class
+/AffichagePhoto.class
 /Controleur.class
 /InscriptionStudent$1.class
 /InscriptionStudent$2.class
 /InscriptionStudent$3.class
+/InscriptionStudent$4.class
+/InscriptionStudent$5.class
 /InscriptionStudent.class
 /InscriptionStudentAng$1.class
 /InscriptionStudentAng$2.class
+/InscriptionStudentAng$3.class
 /InscriptionStudentAng.class
 /InscriptionTeacherAng$1.class
 /InscriptionTeacherAng$2.class
+/InscriptionTeacherAng$3.class
 /InscriptionTeacherAng.class
 /InsriptionTeacher$1.class
 /InsriptionTeacher$2.class
+/InsriptionTeacher$3.class
+/InsriptionTeacher$4.class
 /InsriptionTeacher.class
-/Liste des commandes(resume trié!).pdf
 /LoginAdmin$1.class
 /LoginAdmin$2.class
 /LoginAdmin$3.class
@@ -71,36 +92,27 @@
 /LoginTeacher.class
 /LoginTeacherFr$1.class
 /LoginTeacherFr$2.class
-/LoginTeacherFr$3.class
 /LoginTeacherFr$4.class
 /LoginTeacherFr$5.class
 /LoginTeacherFr$6.class
 /LoginTeacherFr$7.class
+/LoginTeacherFr$3.class
 /LoginTeacherFr.class
 /Welcome$1.class
 /Welcome.class
-/WelcomeHome.class
-/code/
-/linux.pdf
-/text.txt
 /WelcomeHome$1.class
 /WelcomeHome$2.class
 /WelcomeHome$3.class
 /WelcomeHome$4.class
 /WelcomeHome$5.class
 /WelcomeHome$6.class
+/WelcomeHome.class
+/code/
 /tdt$1.class
 /tdt.class
 /tst$1.class
 /tst$2.class
 /tst$3.class
 /tst.class
-/InscriptionStudent$4.class
-/InscriptionStudent$5.class
-/InscriptionStudentAng$3.class
-/InscriptionTeacherAng$3.class
-/InsriptionTeacher$3.class
-/AffichagePhoto$1.class
-/AffichagePhoto.class
-/InsriptionTeacher$4.class
-/AffichagePhoto$2.class
+/AcceuilStudent$25.class
+/AcceuilStudent$26.class
