adding the learning interface and modifying the quiz and cours class

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,21 +1,20 @@
 /AcceuilStudent$1.class
 /AcceuilStudent$10.class
 /AcceuilStudent$11.class
-/AcceuilStudent$12.class
 /AcceuilStudent$13.class
 /AcceuilStudent$14.class
 /AcceuilStudent$15.class
 /AcceuilStudent$16.class
 /AcceuilStudent$17.class
-/AcceuilStudent$18.class
 /AcceuilStudent$19.class
 /AcceuilStudent$2.class
 /AcceuilStudent$20.class
 /AcceuilStudent$21.class
-/AcceuilStudent$22.class
 /AcceuilStudent$23.class
-/AcceuilStudent$24.class
-/AcceuilStudent$3.class
+/AcceuilStudent$25.class
+/AcceuilStudent$26.class
+/AcceuilStudent$27.class
+/AcceuilStudent$28.class
 /AcceuilStudent$4.class
 /AcceuilStudent$5.class
 /AcceuilStudent$6.class
@@ -24,13 +23,34 @@
 /AcceuilStudent$9.class
 /AcceuilStudent.class
 /AcceuilTeacher$1.class
+/AcceuilTeacher$10.class
+/AcceuilTeacher$11.class
+/AcceuilTeacher$12.class
+/AcceuilTeacher$13.class
+/AcceuilTeacher$14.class
+/AcceuilTeacher$15.class
+/AcceuilTeacher$16.class
+/AcceuilTeacher$17.class
+/AcceuilTeacher$18.class
+/AcceuilTeacher$19.class
 /AcceuilTeacher$2.class
+/AcceuilTeacher$20.class
+/AcceuilTeacher$21.class
+/AcceuilTeacher$22.class
+/AcceuilTeacher$23.class
+/AcceuilTeacher$24.class
+/AcceuilTeacher$25.class
+/AcceuilTeacher$26.class
+/AcceuilTeacher$27.class
+/AcceuilTeacher$28.class
+/AcceuilTeacher$29.class
 /AcceuilTeacher$3.class
 /AcceuilTeacher$4.class
 /AcceuilTeacher$5.class
 /AcceuilTeacher$6.class
 /AcceuilTeacher$7.class
 /AcceuilTeacher$8.class
+/AcceuilTeacher$9.class
 /AcceuilTeacher.class
 /AffichagePhoto$1.class
 /AffichagePhoto$2.class
@@ -92,11 +112,11 @@
 /LoginTeacher.class
 /LoginTeacherFr$1.class
 /LoginTeacherFr$2.class
+/LoginTeacherFr$3.class
 /LoginTeacherFr$4.class
 /LoginTeacherFr$5.class
 /LoginTeacherFr$6.class
 /LoginTeacherFr$7.class
-/LoginTeacherFr$3.class
 /LoginTeacherFr.class
 /Welcome$1.class
 /Welcome.class
@@ -114,5 +134,19 @@
 /tst$2.class
 /tst$3.class
 /tst.class
-/AcceuilStudent$25.class
-/AcceuilStudent$26.class
+/AcceuilStudent$29.class
+/AcceuilStudent$30.class
+/AcceuilStudent$31.class
+/AcceuilStudent$32.class
+/AcceuilStudent$33.class
+/AcceuilStudent$34.class
+/AcceuilStudent$35.class
+/AcceuilStudent$12.class
+/AcceuilStudent$18.class
+/AcceuilStudent$22.class
+/AcceuilStudent$24.class
+/AcceuilStudent$3.class
+/AcceuilStudent$36.class
+/AcceuilStudent$37.class
+/AcceuilStudent$38.class
+/AcceuilStudent$39.class
